--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                 <span class="heading-primary-main">Outdoors</span>
                 <span class="heading-primary-sub">is where lift happens</span>
             </h1>
+
+            <a href="#" class="btn btn-white">Discover our tours</a>
         </div>
     </header>
 
